--- a/src/assets/scss/content.scss
+++ b/src/assets/scss/content.scss
@@ -368,7 +368,7 @@
     }
 
     &:before{
-        content: "quote";
+        content: "";
         position: absolute;
         font-size: 11em;
         font-weight: 900;
