--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -562,7 +562,12 @@
 }
 
 
-
+@media screen and (max-width: 450px){
+    
+    .commentSection{
+        padding: 25px;
+    }
+}
 
 /***
   ================
